# docs-new

./: .gitignore  add-build-config.js  antora-navigator.yml  antora-playbook.yml  conceptuele-informatiemodelen.justfile  dataproducten.justfile  dp.sh  generate-content.js  justfile  package-lock.json  package.json  pyproject.dp.toml  pyproject.toml
.github/workflows/: publish.yml
output/docs/: 404.html  search-index.js  sitemap.xml
root_component/: antora.yml
root_component/modules/ROOT/: nav.adoc
sandbox/: capaciteitskaart.adms.yml
sandbox/aansluitingenregister/1.1.2/: antora.yml
sandbox/aansluitingenregister/1.1.3/: aansluitingenregister.linkml.yml
scripts/: add-collector-config.js  conceptuele-informatiemodellen.sh  copy-to-out.sh  dataproducten.sh  generate-all.sh  generate-global-nav.js  generate-register.sh  inject-global-nav.js  set-legacy-collections.js
scripts/cim-dataproduct/: generate-docs.sh
scripts/conceptuele-informatiemodellen-templates/: index.md.jinja2
scripts/data-modeling/: justfile
scripts/legacy/: inject-global-nav.js  inject-global-nav.sh
scripts/nationaal-energieregister/: generate-docs.sh
scripts/nationaal-energieregister/templates/: index.md.jinja2
scripts/nbnl-register/: generate-docs.sh
scripts/nbnl-register/templates/: index.md.jinja2
src/: conceptuele-informatiemodellen
src/aangeslotenenregister/1.0/: aangeslotenenregister.linkml.yml  (+1 more)
supplemental-ui/css/: extra.css
supplemental-ui/js/: add-back-to-home-nav-item.js
supplemental-ui/partials/: footer-scripts.hbs  head-styles.hbs  header-content.hbs
(+94 files in other folders)
